# AttributionGen

./: .gitignore  README.md  components.xlsx  licenses.yaml  main.py  project_config.yaml  pyproject.toml  reset_license_serial_start.py  templates.yaml
.claude/: settings.local.json
src/attribution_generator/: component.py  generator.py  license_manager.py  template_manager.py
