[project]
name = "oss-attribution-generator"
version = "0.1.0"
description = "Generate attribution files for open source software dependencies"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
]
